manifests/cilium/hubble-relay-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-relay
  namespace: kube-system
  annotations:
    io.cilium/lb-ipam-ips: "172.16.100.101"
spec:
  type: LoadBalancer
