manifests/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
    external-dns.alpha.kubernetes.io/target: "217.78.182.161"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "172.16.100.251"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-eta-lex-la
      hostname: "eta.lex.la"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lex-la-tls
            kind: Secret
    - name: https-job-lex-la
      hostname: "job.lex.la"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lex-la-tls
            kind: Secret
    - name: https-map-lex-la
      hostname: "map.lex.la"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lex-la-tls
            kind: Secret
    - name: https-sviridk-in
      hostname: "*.sviridk.in"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: sviridk-in-tls
            kind: Secret
