manifests/cilium/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-internal
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
    external-dns.alpha.kubernetes.io/target: "172.16.100.250"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "172.16.100.250"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-home-lex-la
      hostname: "argocd.home.lex.la"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: home-lex-la-tls
            kind: Secret
    - name: https-transmission-home-lex-la
      hostname: "transmission.home.lex.la"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: home-lex-la-tls
            kind: Secret
    - name: https-longhorn-k8s-home-lex-la
      hostname: "longhorn.k8s.home.lex.la"
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: k8s-home-lex-la-tls
            kind: Secret
